--- a/Proj/ELT/ELT.cbp
+++ b/Proj/ELT/ELT.cbp
@@ -37,6 +37,9 @@
 					<Add option="-g" />
 					<Add option="-D_DEBUG" />
 				</Compiler>
+				<Linker>
+					<Add option="-shared" />
+				</Linker>
 			</Target>
 			<Target title="Release_Share">
 				<Option output="bin/Release/ELT" prefix_auto="1" extension_auto="1" />
