--- a/Proj/ELT/ELT.cbp
+++ b/Proj/ELT/ELT.cbp
@@ -29,12 +29,13 @@
 				</Linker>
 			</Target>
 			<Target title="Debug_Share">
-				<Option output="bin/Debug/ELT" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/EnginEx" imp_lib="$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).a" def_file="$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).def" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
-				<Option type="1" />
+				<Option type="3" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
+					<Add option="-fPIC" />
 					<Add option="-D_DEBUG" />
 				</Compiler>
 				<Linker>
@@ -64,9 +65,9 @@
 			<Add library="pthread" />
 			<Add library="OpenCL" />
 			<Add library="EGL" />
-			<Add library="cmdlib" />
 			<Add library="Xrender" />
 			<Add library="rt" />
+			<Add library="cmdlib" />
 		</Linker>
 		<Unit filename="../../Source/EngineAssembly.h" />
 		<Unit filename="../../Source/EngineConfig.h" />
