--- a/Proj/ELT/ELT.cbp
+++ b/Proj/ELT/ELT.cbp
@@ -23,6 +23,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add option="NDEBUG" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -49,6 +50,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add option="NDEBUG" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
