resolved some issues with compiling on visual2010

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,16 @@
 #ignore machine code files
 *.o
+
 #ignore backup files. is not needed.
+
 *.~
+
 #ignore windows machine files.
+
 *.obj
+
 *.c~
+
 *.h~
+*.exe
+*.sdf
