--- a/Proj/ELT/ELT.cbp
+++ b/Proj/ELT/ELT.cbp
@@ -12,6 +12,7 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
+					<Add option="-Wextra" />
 					<Add option="-g" />
 					<Add option="-D_DEBUG" />
 				</Compiler>
