--- a/Proj/ELT/ELT.cbp
+++ b/Proj/ELT/ELT.cbp
@@ -150,6 +150,9 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="../../Source/System/elt_win.h" />
+		<Unit filename="../../Source/elt_alloc.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="../../Source/elt_alloc.h" />
 		<Unit filename="../../Source/elt_console.c">
 			<Option compilerVar="CC" />
