--- a/Proj/vs2010/EngineEx.vcxproj
+++ b/Proj/vs2010/EngineEx.vcxproj
@@ -113,8 +113,9 @@
       <TreatWarningAsError>false</TreatWarningAsError>
       <AdditionalIncludeDirectories>
       </AdditionalIncludeDirectories>
-      <AdditionalOptions>-fpermissive -wd2440 %(AdditionalOptions)</AdditionalOptions>
-      <DisableSpecificWarnings>2440;</DisableSpecificWarnings>
+      <AdditionalOptions>/fpermissive /wd2440 %(AdditionalOptions)</AdditionalOptions>
+      <DisableSpecificWarnings>
+      </DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -126,7 +127,7 @@
       </ModuleDefinitionFile>
       <AddModuleNamesToAssembly>
       </AddModuleNamesToAssembly>
-      <DelayLoadDLLs>freetype6.dll;D3D9.dll;dinput8.dll;ws2_32.dll</DelayLoadDLLs>
+      <DelayLoadDLLs>D3D9.dll;dinput8.dll;ws2_32.dll</DelayLoadDLLs>
       <SupportUnloadOfDelayLoadedDLL>true</SupportUnloadOfDelayLoadedDLL>
       <IgnoreAllDefaultLibraries>
       </IgnoreAllDefaultLibraries>
@@ -291,7 +292,6 @@
     <ClInclude Include="..\..\Source\Input\elt_keyboard.h" />
     <ClInclude Include="..\..\Source\Input\elt_mouse.h" />
     <ClInclude Include="..\..\Source\Input\GUIDs.h" />
-    <ClInclude Include="..\..\Source\Input\XBoxControllerHandler.h" />
     <ClInclude Include="..\..\Source\resource.h" />
     <ClInclude Include="..\..\Source\System\elt_audio.h" />
     <ClInclude Include="..\..\Source\System\elt_cl.h" />
