--- a/Proj/ELT/ELT.cbp
+++ b/Proj/ELT/ELT.cbp
@@ -24,7 +24,9 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
-					<Add option="NDEBUG" />
+					<Add option="-Wextra" />
+					<Add option="-Wall" />
+					<Add option="-DNDEBUG" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -57,9 +59,21 @@
 					<Add option="-s" />
 				</Linker>
 			</Target>
+			<Target title="Debug_android">
+				<Option output="bin/Debug/ELT" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/Debug/" />
+				<Option type="1" />
+				<Option compiler="arm-elf-gcc" />
+				<Compiler>
+					<Add option="-Wextra" />
+					<Add option="-g" />
+					<Add option="-D_DEBUG" />
+				</Compiler>
+			</Target>
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
+			<Add option="-L/usr/include/android/" />
 		</Compiler>
 		<Linker>
 			<Add option="-lXrandr" />
