--- a/Proj/vs2010/EngineEx.vcxproj
+++ b/Proj/vs2010/EngineEx.vcxproj
@@ -286,6 +286,11 @@
     <ClInclude Include="..\..\Source\Input\elt_keyboard.h" />
     <ClInclude Include="..\..\Source\Input\elt_mouse.h" />
     <ClInclude Include="..\..\Source\Input\GUIDs.h" />
+    <ClInclude Include="..\..\Source\math\frustum.h" />
+    <ClInclude Include="..\..\Source\math\matrix.h" />
+    <ClInclude Include="..\..\Source\math\quad.h" />
+    <ClInclude Include="..\..\Source\math\raytrace.h" />
+    <ClInclude Include="..\..\Source\math\vect.h" />
     <ClInclude Include="..\..\Source\resource.h" />
     <ClInclude Include="..\..\Source\System\elt_audio.h" />
     <ClInclude Include="..\..\Source\System\elt_cl.h" />
